Fix the action key sizing on mobile
This was bugging me.

--- a/src/Game/Keyboard/Row/Row.module.css
+++ b/src/Game/Keyboard/Row/Row.module.css
@@ -31,6 +31,10 @@
     border-left-width: 0px;
   }
 
+  .actionKey {
+    flex: 2;
+  }
+
   .row:first-child > div {
     border-bottom: 0;
   }
